--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {
-    background-color: black;
+  background-color: black;
 }
 
 canvas {
-    background-color: white;
+  background-color: white;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  color: white;
 }
